--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial scale=1" />
     <title>Ivan Wicaksono</title>
-    <link rel="stylesheet" href="https://github.com/ivantrywicaksono/ivantrywicaksono.github.io/blob/main/css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <h1>Welcome to Ivan's Website</h1>
