--- a/index.html
+++ b/index.html
@@ -2,11 +2,20 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <meta name="viewport" content="width=device-width, initial scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Ivan Wicaksono</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <h1>Welcome to Ivan's Website</h1>
+    <header>
+      <h1 class="logo">Ivan Wicaksono</h1>
+      <nav class="links">
+        <ul>
+          <li><a href="https://ivantrywicaksono.github.io/coffee-ratio">Coffee</a></li>
+          <li><a href="#">About</a></li>
+        </ul>
+      </nav>
+
+    </header>
   </body>
 </html>
