--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <h1 class="logo">Ivan Wicaksono</h1>
+      <h1 class="logo">IVAN WICAKSONO</h1>
       <nav class="links">
         <ul>
           <li><a href="https://ivantrywicaksono.github.io/coffee-ratio">Coffee</a></li>
